# SITL

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_min.bat  build_min.sh  build_setup.bat  clean.bat  clean.sh  prepare.bat  prepare.sh
cmake/: sitl-config.cmake
include/: Command.h  Config.h  Connection.h  Sized.h  Stuff.h  sitl.h
include/commands/: Iden.h  List.h  Mrd.h  Mwr.h
include/sitl/: Command.h  Config.h  Connection.h  Stuff.h  sitl.h
include/sitl/commands/: Iden.h  List.h  Mrd.h  Mwr.h
setup/: __init__.py  build_setup.iss
src/: CMakeLists.txt  Command.cpp  Connection.cpp  Stuff.cpp  sitl_wrap.cpp  test.cpp
src/commands/: Iden.cpp  List.cpp  Mrd.cpp  Mwr.cpp
test/: CMakeLists.txt  TestCommands.cpp  TestConnection.cpp  TestFirst.cpp  TestStuff.cpp  main.cpp
